--- a/index.html
+++ b/index.html
@@ -31,22 +31,23 @@
             </a>
         </nav>
         <nav class="nav-bar">
-            <!-- <a href="#/" title="Discover">Discover</a> 
-            <a href="#/inspirations"title="Inspirations">Inspirations</a> 
-            <a href="#/hot-posts"title="What&#39;s hot">What's hot</a> 
-            <a href="#/inspirations/girls"title="Girls">Girls</a> 
-            <a href="#/inspirations/travel" title="Travel">Travel</a> 
-            <a href="#/inspirations/funny" title="Funny">Funny</a> 
-            <a href="#/tag/love" title="Love">#Love</a> 
-            <a href="#/tag/instagood" title="Instagood">#Instagood</a> 
-            <a href="#/tag/beautiful" title="Beautiful">#Beautiful</a> -->
+            <a href="category.html?type=youxi">游戏</a>
+            <a href="category.html?type=jiankang">健康</a>
+            <a href="category.html?type=tiyu">体育</a>
+            <a href="category.html?type=dongman">动漫</a>
+            <a href="category.html?type=shishang">时尚</a>
+            <a href="category.html?type=jiaoyu">教育</a>
+            <a href="category.html?type=qiche">汽车</a>
+            <a href="category.html?type=keji">科技</a>
+            <a href="category.html?type=sheyingjiaoxue">摄影教学</a>
+            <a href="category.html?type=zhengwu">政务</a>
+            <a href="category.html?type=bangongruanjian">办公软件</a>
+            <a href="category.html?type=wenxueyishu">文学艺术</a>
         </nav>
         <ul class="nav-dropdown">
-            <li><a href="index.html" title="Discover">首页</a></li>
-            <!-- <li><a href="#/inspirations" title="Inspirations">Inspirations</a></li> -->
-            <li><a href="#">English</a></li>
-            <li><a href="#">日本語</a></li>
-            <!-- <li><a href="#/about" rel="nofollow">About&amp;Help</a></li> -->
+            <li><a href="index.html">首页</a></li>
+            <li><a href="#">类目</a></li>
+            <li><a href="#">关于</a></li>
         </ul>
     </header>
     <div id="masthead">
@@ -64,12 +65,6 @@
     </div>
     <div id="category">
         <ul class="clearfix">
-            
-            <li>
-                <div class="bg" style="background-image: url(./img/travel.png)">
-                    <h2> <a href="category.html?type=travel"> 旅行 </a> </h2>
-                </div>
-            </li>
             <li>
                 <div class="bg" style="background-image: url(./img/meishi.png)">
                     <h2> <a href="category.html?type=meishi"> 美食 </a> </h2>
@@ -85,15 +80,29 @@
                     <h2> <a href="category.html?type=meizhuang"> 美妆 </a> </h2>
                 </div>
             </li>
-            
             <li>
-                <div class="bg" style="background-image: url(./img/sannong.png)">
-                    <h2> <a href="category.html?type=sannong"> 三农 </a> </h2>
+                <div class="bg" style="background-image: url(./img/travel.png)">
+                    <h2> <a href="category.html?type=travel"> 旅行 </a> </h2>
                 </div>
             </li>
             <li>
                 <div class="bg" style="background-image: url(./img/muying.png)">
-                    <h2> <a href="category.html?type=muying"> 母婴 </a> </h2>
+                    <h2> <a href="category.html?type=muying"> 母婴育儿 </a> </h2>
+                </div>
+            </li>
+            <li>
+                <div class="bg" style="background-image: url(./img/jiaju.png)">
+                    <h2> <a href="category.html?type=jiaju"> 家居 </a> </h2>
+                </div>
+            </li>
+            <li>
+                <div class="bg" style="background-image: url()">
+                    <h2> <a href="category.html?type=chongwu"> 宠物 </a> </h2>
+                </div>
+            </li>
+            <li>
+                <div class="bg" style="background-image: url()">
+                    <h2> <a href="category.html?type=yingshiyule"> 影视娱乐 </a> </h2>
                 </div>
             </li>
         </ul>
