--- a/category.html
+++ b/category.html
@@ -51,26 +51,27 @@
     </header>
     
     <div class="container" id="yoo-list">
+        <div id="yoo-title-sm" class="clearfix">
+            <h2> <a href="https://www.yooying.com/hot-posts" title="Hot Posts" id="category-title">精彩内容</a> </h2> 
+        </div>
         <ul class="row">
-            <div id="yoo-title-sm" class="clearfix">
-                <h2> <a href="https://www.yooying.com/hot-posts" title="Hot Posts" id="category-title">精彩内容</a> </h2> 
-            </div>
         </ul>
-        <div id="yoo-loading">
-            <!-- <div class="spinner">
+        <!-- <div id="yoo-loading">
+            <div class="spinner">
                 <div class="rect1"></div>
                 <div class="rect2"></div>
                 <div class="rect3"></div>
                 <div class="rect4"></div>
-            </div> -->
+            </div>
             <div class="button hide" data-page="home" data-switch="off" data-name="home" data-next="home"><span
                     class="a">加载更多</span><span class="b">加载失败，请点击重试</span></div>
-            <!-- <div class="end"> <a href="https://www.yooying.com/inspirations?ref=discover" rel="nofollow"
+            <div class="end"> <a href="https://www.yooying.com/inspirations?ref=discover" rel="nofollow"
                     class="button">See
-                    More</a> </div> -->
-        </div>
+                    More</a> </div>
+        </div> -->
     </div>
     <script src="js/jquery.min.js" type="text/javascript"></script>
+    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
     <script src="js/category.js"></script>
 </body>
