--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
         </ul>
     </div>
     <div class="container" id="yoo-list">
+        <div id="yoo-title-sm" class="clearfix">
+            <h2> <a href="https://www.yooying.com/hot-posts" title="Hot Posts">推荐视频</a> </h2> <a
+                href="https://www.yooying.com/hot-posts" title="Hot Posts"
+                class="button button-white button-sm">更多</a>
+        </div>
         <ul class="row">
-            <div id="yoo-title-sm" class="clearfix">
-                <h2> <a href="https://www.yooying.com/hot-posts" title="Hot Posts">推荐视频</a> </h2> <a
-                    href="https://www.yooying.com/hot-posts" title="Hot Posts"
-                    class="button button-white button-sm">更多</a>
-            </div>
         </ul>
         <!-- <div id="yoo-loading">
             <div class="spinner">
@@ -129,6 +129,7 @@
         </div> -->
     </div>
     <script src="js/jquery.min.js" type="text/javascript"></script>
+    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
     <script src="js/index.js"></script>
 </body>
