--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
                 </div>
             </li>
             <li>
-                <div class="bg" style="background-image: url()">
+                <div class="bg" style="background-image: url(./img/chongwu.png)">
                     <h2> <a href="category.html?type=chongwu"> 宠物 </a> </h2>
                 </div>
             </li>
             <li>
-                <div class="bg" style="background-image: url()">
+                <div class="bg" style="background-image: url(./img/yingshi.png)">
                     <h2> <a href="category.html?type=yingshiyule"> 影视娱乐 </a> </h2>
                 </div>
             </li>
