--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
         </nav>
         <ul class="nav-dropdown">
             <li><a href="index.html">首页</a></li>
-            <li><a href="#">类目</a></li>
-            <li><a href="#">关于</a></li>
+            <li><a href="#">创意分类</a></li>
+            <li><a href="#">购买</a></li>
+            <li><a href="#">关于抖起</a></li>
         </ul>
     </header>
     <div id="masthead">
