--- a/category.html
+++ b/category.html
@@ -42,12 +42,10 @@
             <a href="#/tag/beautiful" title="Beautiful">#Beautiful</a> -->
         </nav>
         <ul class="nav-dropdown">
-            <li><a href="index.html" title="Discover">首页</a></li>
-            <!-- <li><a href="#/inspirations" title="Inspirations">Inspirations</a></li> -->
-            <li><a href="#">English</a></li>
-            <li><a href="#">日本語</a></li>
-            <!-- <li><a href="#/about" rel="nofollow">About&amp;Help</a></li> -->
-        </ul>
+            <li><a href="index.html">首页</a></li>
+            <li><a href="#">创意分类</a></li>
+            <li><a href="#">购买</a></li>
+            <li><a href="#">关于抖起</a></li>
     </header>
     
     <div class="container" id="yoo-list">
