--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         </nav>
         <ul class="nav-dropdown">
             <li><a href="index.html">首页</a></li>
-            <li><a href="#">创意分类</a></li>
-            <li><a href="#">购买</a></li>
+            <li><a href="type.html">创意分类</a></li>
+            <li><a href="buy.html">购买</a></li>
             <li><a href="#">关于抖起</a></li>
         </ul>
     </header>
