--- a/buy.html
+++ b/buy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 
 <head>
     <meta charset="UTF-8">
@@ -9,13 +9,13 @@
     <link rel="shortcut icon" href="#/favicon.ico">
     <link href="css/app.css" rel="stylesheet" type="text/css">
     <link href="css/index.css" rel="stylesheet" type="text/css">
-    <title>创意分类</title>
+    <title>创意订购</title>
 </head>
 
 <body>
     <header id="yoo-header">
         <nav class="nav-icon">
-            <a href="index.html" title="Yooying" class="i-brand"> 抖起创意 </a>
+            <a href="index.html" title="Yooying" class="i-brand"> 沙抖创意 </a>
             <a href="javascript:;" class="i-menu">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="24" height="24" stroke-width="3.5">
                     <path d="M4 8 L28 8 M4 16 L28 16 M4 24 L28 24"></path>
@@ -790,6 +790,7 @@
     </section>
     </div>
     <script src="js/jquery.min.js" type="text/javascript"></script>
+    <script src="js/app.js" type="text/javascript"></script>
 </body>
 
 </html>
