--- a/category.html
+++ b/category.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 
 <head>
     <meta charset="UTF-8">
@@ -14,7 +14,7 @@
 <body>
     <header id="yoo-header">
         <nav class="nav-icon">
-            <a href="index.html" title="Yooying" class="i-brand"> 抖起创意 </a>
+            <a href="index.html" title="Yooying" class="i-brand"> 沙抖创意 </a>
             <a href="javascript:;" class="i-menu">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="24" height="24" stroke-width="3.5">
                     <path d="M4 8 L28 8 M4 16 L28 16 M4 24 L28 24"></path>
@@ -69,9 +69,10 @@
         </div> -->
     </div>
     <script src="js/jquery.min.js" type="text/javascript"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
-    <script src="js/category.js"></script>
+    <script src="js/category.js" type="text/babel"></script>
 </body>
 
 </html>
