--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <link rel="shortcut icon" href="#/favicon.ico">
     <link href="css/app.css" rel="stylesheet" type="text/css">
-    <title>抖起创意</title>
+    <title>沙抖创意</title>
 </head>
 <body>
     <header id="yoo-header">
         <nav class="nav-icon">
             <a href="index.html" title="Yooying" class="i-brand">
-                抖起创意
+                沙抖创意
             </a>
             <a href="javascript:;" class="i-menu">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="24" height="24" stroke-width="3.5">
@@ -55,7 +55,7 @@
         <div class="stars-sm"></div>
         <div class="stars-lg"></div>
         <div class="title">
-            <h1>抖起创意</h1>
+            <h1>沙抖创意</h1>
             <p>为用户提供视频创意库及视频制作服务</p>
         </div>
         <div class="search"> <svg viewBox="0 0 32 32" width="18" height="18" stroke-width="2">
@@ -130,9 +130,10 @@
         </div> -->
     </div>
     <script src="js/jquery.min.js" type="text/javascript"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
-    <script src="js/index.js"></script>
+    <script src="js/index.js" type="text/babel"></script>
 </body>
 
 </html>
