--- a/index.html
+++ b/index.html
@@ -130,10 +130,9 @@
         </div> -->
     </div>
     <script src="js/jquery.min.js" type="text/javascript"></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
-    <script src="js/index.js" type="text/babel"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
