--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
     </div>
     <div class="container" id="yoo-list">
         <div id="yoo-title-sm" class="clearfix">
-            <h2> <a href="https://www.yooying.com/hot-posts" title="Hot Posts">推荐视频</a> </h2> <a
-                href="https://www.yooying.com/hot-posts" title="Hot Posts"
-                class="button button-white button-sm">更多</a>
+            <h2> <a href="https://www.yooying.com/hot-posts" title="Hot Posts">推荐视频</a> </h2> 
+            <!-- <a href="https://www.yooying.com/hot-posts" title="Hot Posts"
+                class="button button-white button-sm">更多</a> -->
         </div>
         <ul class="row">
         </ul>
