--- a/buy.html
+++ b/buy.html
@@ -582,6 +582,19 @@
                                     视频制作后，你可以发布到自己的官方抖音号，也可以委托我们发布到适合的IP号上面，视频制作赠送一定数量的保底播放量，一般一组视频不低于10万次播放。
                                 </p>
                             </div>
+                            <div class="block">
+                                <h3 class="block__heading heading--4">看中一个视频，可以单独订购这个视频的创意吗？</h3>
+                                <p class="block__content">
+                                    可以的。
+                                    你可以联系创意顾问进行订购。
+                                </p>
+                            </div>
+                            <div class="block">
+                                <h3 class="block__heading heading--4">流量投放服务可以定向用户画像吗？</h3>
+                                <p class="block__content">
+                                    可以的。流量投放支持性别、地区、年龄、兴趣等多维度定向投放。
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
