--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
         </div>
         <ul class="row">
         </ul>
+        <div class="loading">
+            <img src="img/loading.svg" alt="">
+        </div>
         <!-- <div id="yoo-loading">
             <div class="spinner">
                 <div class="rect1"></div>
