--- a/buy.html
+++ b/buy.html
@@ -50,7 +50,8 @@
             <li><a href="index.html">首页</a></li>
             <li><a href="type.html">创意分类</a></li>
             <li><a href="buy.html">购买</a></li>
-            <li><a href="#">关于抖起</a></li>
+            <li><a href="#">关于沙抖</a></li>
+        </ul>
     </header>
     <section class="section">
         <div class="grid">
