--- a/category.html
+++ b/category.html
@@ -45,9 +45,15 @@
             <li><a href="index.html">首页</a></li>
             <li><a href="type.html">创意分类</a></li>
             <li><a href="buy.html">购买</a></li>
-            <li><a href="#">关于抖起</a></li>
+            <li><a href="#">关于沙抖</a></li>
+        </ul>
     </header>
-    
+    <div id="yoo-top">
+        <div class="a">
+            <div class="container">
+            </div>
+        </div>
+    </div>
     <div class="container" id="yoo-list">
         <div id="yoo-title-sm" class="clearfix">
             <h2> <a href="https://www.yooying.com/hot-posts" title="Hot Posts" id="category-title">精彩内容</a> </h2> 
@@ -72,7 +78,7 @@
         </div> -->
     </div>
     <script src="js/jquery.min.js" type="text/javascript"></script>
-    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+    <script src="js/imgload.min.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
     <script src="js/category.js"></script>
 </body>
