--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
             <a href="category.html?type=jiaoyu">教育</a>
             <a href="category.html?type=qiche">汽车</a>
             <a href="category.html?type=keji">科技</a>
-            <a href="category.html?type=sheyingjiaoxue">摄影教学</a>
+            <a href="category.html?type=sheyingjiaoxue">摄影</a>
             <a href="category.html?type=zhengwu">政务</a>
-            <a href="category.html?type=bangongruanjian">办公软件</a>
-            <a href="category.html?type=wenxueyishu">文学艺术</a>
+            <a href="category.html?type=bangongruanjian">办公</a>
+            <a href="category.html?type=wenxueyishu">艺术</a>
         </nav>
         <ul class="nav-dropdown">
             <li><a href="index.html">首页</a></li>
             <li><a href="type.html">创意分类</a></li>
             <li><a href="buy.html">购买</a></li>
-            <li><a href="#">关于抖起</a></li>
+            <li><a href="#">关于沙抖</a></li>
         </ul>
     </header>
     <div id="masthead">
@@ -133,7 +133,7 @@
         </div> -->
     </div>
     <script src="js/jquery.min.js" type="text/javascript"></script>
-    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+    <script src="js/imgload.min.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
     <script src="js/index.js"></script>
 </body>
