--- a/type.html
+++ b/type.html
@@ -35,7 +35,8 @@
             <li><a href="index.html">首页</a></li>
             <li><a href="type.html">创意分类</a></li>
             <li><a href="buy.html">购买</a></li>
-            <li><a href="#">关于抖起</a></li>
+            <li><a href="#">关于沙抖</a></li>
+        </ul>
     </header>
     <div id="yoo-top">
         <div class="a">
@@ -64,7 +65,7 @@
         </div> -->
     </div>
     <script src="js/jquery.min.js" type="text/javascript"></script>
-    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+    <script src="js/imgload.min.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
     <script>
         const typeList = {
@@ -133,7 +134,7 @@
             code: 16,
         },
         'sheyingjiaoxue': {
-            name: '摄影教学',
+            name: '摄影',
             code: 17,
         },
         'zhengwu': {
@@ -141,11 +142,11 @@
             code: 18,
         },
         'bangongruanjian': {
-            name: '办公软件',
+            name: '办公',
             code: 19,
         },
         'wenxueyishu': {
-            name: '文学艺术',
+            name: '艺术',
             code: 20,
         }
     }
