--- a/video.html
+++ b/video.html
@@ -41,11 +41,11 @@
     </header>
     <div id="yoo-top" class="user-post-profile">
         <div class="a">
-            <ul class="container clearfix"> <a href="/britneytokyo" title="britneytokyo" class="user-avatar"> 
+            <ul class="container clearfix"> <a href="javascript:;" title="britneytokyo" class="user-avatar"> 
                 <img src="https://scontent-sjc3-1.cdninstagram.com/v/t51.2885-19/s150x150/36085882_205787880074252_6331302924160860160_n.jpg?_nc_ht=scontent-sjc3-1.cdninstagram.com&amp;_nc_ohc=BBU_XePW6LAAX---Rlv&amp;oh=c4211c7cfd5dccdc4ebbcb0acb3361b9&amp;oe=5EE0FCE8"
                         width="70" height="70" alt="Britney TOKYO 💅✨ @britneytokyo" class="avatar" rel="nofollow"> </a>
                 <div class="text">
-                    <h1> <a href="/britneytokyo" title="britneytokyo">Crystal</a>&nbsp;·&nbsp;北京, 中国 </h1>
+                    <h1> <a href="javascript:;" title="britneytokyo">Crystal</a>&nbsp;·&nbsp;北京, 中国 </h1>
                     <p> 2天前 </p>
                 </div>
             </ul>
@@ -108,15 +108,19 @@
                 </div>
                 <div class="r_">
                     <div id="affix">
-                        <div class="card share">
+                        <div class="card">
                             <div class="bg">
-                                <h3>视频相关</h3>
+                                <h3 class="video-desc-title">视频相关</h3>
                                 <div class="caption">
-                                    <p></p>
-                                    <footer>
-                                        <small><i class="icon-like"></i><span class="like-count"></span></small>
-                                        <small><i class="icon-comment"></i><span class="comment-count"></span></small>
-                                    </footer>
+                                    <p>剧本编号: <span class="vid"></span></p>
+                                    <p>点赞量: <span class="like-count"></span></p>
+                                    <p>评价量: <span class="comment-count"></span></p>
+                                    <p>发布日期: <span class="v-date"></span></p>
+                                    <p>视频来源: <a class="v-url" href="#" target="_blank"></a></p>
+                                    <div class="btn-buy-box">
+                                        <p style="color: #333; text-align: center;">本站提供视频剧本参考服务</p>
+                                        <a class="btn-buy-go" href="buy.html">立即联系创意顾问</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
