--- a/video.html
+++ b/video.html
@@ -60,7 +60,7 @@
                         <div class="photo" id="photo">
                             <a class="img" href="" target="_blank">
                                 <i class="icon-play"></i>
-                                    <img class="video-img" src="">
+                                    <img class="v-desc-box" src="">
                                 </a>
                             <!-- <i class="icon-head"> 
                                 <svg id="i-user" viewBox="0 0 32 32"
