--- a/video.html
+++ b/video.html
@@ -110,16 +110,23 @@
                     <div id="affix">
                         <div class="card">
                             <div class="bg">
-                                <h3 class="video-desc-title">视频相关</h3>
-                                <div class="caption">
-                                    <p>剧本编号: <span class="vid"></span></p>
-                                    <p>点赞量: <span class="like-count"></span></p>
-                                    <p>评价量: <span class="comment-count"></span></p>
-                                    <p>发布日期: <span class="v-date"></span></p>
-                                    <p>视频来源: <a class="v-url" href="#" target="_blank"></a></p>
+                                <!-- <h3 class="video-desc-title"></h3> -->
+                                <div class="caption v-desc-info">
+                                    <p>剧本编号&nbsp;：<span class="vid"></span></p>
+                                    <p>文案&nbsp;：“<span class="video-desc-title"></span>”</p>
+                                    <p>点赞量&nbsp;：<span class="like-count"></span></p>
+                                    <p>评价量&nbsp;：<span class="comment-count"></span></p>
+                                    <p>发布日期&nbsp;：<span class="v-date"></span></p>
+                                    <p>视频来源&nbsp;：<br>
+                                        <a class="v-url" href="#" target="_blank"></a>
+                                    </p>
+                                    <p>创意剧本&nbsp;：<span>￥500元/个</span></p>
+                                    <p>视频拍摄制作&nbsp;：<span>￥3000元/条</span></p>
+                                    <p>视频投放服务&nbsp;：<span>￥2分/次</span></p>
+                                    <p style="color: #333; text-align: right;">本站提供视频剧本参考服务</p>
                                     <div class="btn-buy-box">
-                                        <p style="color: #333; text-align: center;">本站提供视频剧本参考服务</p>
                                         <a class="btn-buy-go" href="buy.html">立即联系创意顾问</a>
+                                        <a class="btn-buy-go btn-buy-play" href="buy.html" style="background-color: #c3c3c3;">观看视频</a>
                                     </div>
                                 </div>
                             </div>
