--- a/buy.html
+++ b/buy.html
@@ -20,11 +20,13 @@
 <body>
     <div id="GlobalIconSymbols" style="display: none;">
         <svg xmlns="http://www.w3.org/2000/svg">
-            <symbol id="modules-checked"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.7 40" id="row-icon">
+            <symbol id="modules-checked">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.7 40" id="row-icon">
                     <path
                         d="M16.7 30l-7.4-7.9c-.8-.8-.6-2 .4-2.6 1-.6 2.4-.5 3.1.3l3.7 4 11.3-13c.7-.8 2.1-1 3.1-.4s1.2 1.8.5 2.6L16.7 30z">
                     </path>
-                </svg></symbol>
+                </svg>
+            </symbol>
         </svg>
     </div>
     <header id="yoo-header">
@@ -64,7 +66,7 @@
             <div class="grid__item grid__item--mobile-up-align-center">
                 <div class="text-center gutter-bottom--mobile">
                     <form class="marketing-button-wrapper" action="#" method="post">
-                        <button class="marketing-button js-open-signup">立即联系创意顾问</button>
+                        <button class="marketing-button">立即联系创意顾问</button>
                     </form>
                 </div>
             </div>
