--- a/video.html
+++ b/video.html
@@ -110,20 +110,25 @@
                     <div id="affix">
                         <div class="card">
                             <div class="bg">
-                                <!-- <h3 class="video-desc-title"></h3> -->
+                                <h3 class="video-desc-title"></h3>
                                 <div class="caption v-desc-info">
-                                    <p>剧本编号&nbsp;：<span class="vid"></span></p>
-                                    <p>文案&nbsp;：“<span class="video-desc-title"></span>”</p>
-                                    <p>点赞量&nbsp;：<span class="like-count"></span></p>
-                                    <p>评价量&nbsp;：<span class="comment-count"></span></p>
-                                    <p>发布日期&nbsp;：<span class="v-date"></span></p>
-                                    <p>视频来源&nbsp;：<br>
+                                    <div class="v-flex">
+                                        <p>编号&nbsp;：<span class="vid"></span></p>
+                                        <p>发布日期&nbsp;：<span class="v-date"></span></p>
+                                    </div>
+                                    <!-- <p>文案&nbsp;：“<span class="video-desc-title"></span>”</p> -->
+                                    <div>
+                                        <div class="count-box">点赞量&nbsp;：<span class="like-count"></span></div>
+                                        <div class="count-box" style="background-color: #485f7c;">评价量&nbsp;：<span class="comment-count"></span></div>
+                                    </div>
+                                    <p style="font-size: 12px;margin-top: 20px"><span>服务：本站提供同视频剧本编制，及创意剧本定制及视频拍摄制作服务</span></p>
+                                    <p style="font-style: italic; color: gray;">视频来源&nbsp;：
                                         <a class="v-url" href="#" target="_blank"></a>
                                     </p>
-                                    <p>创意剧本&nbsp;：<span>￥500元/个</span></p>
-                                    <p>视频拍摄制作&nbsp;：<span>￥3000元/条</span></p>
-                                    <p>视频投放服务&nbsp;：<span>￥2分/次</span></p>
-                                    <p style="color: #333; text-align: right;">本站提供视频剧本参考服务</p>
+                                    <div class="v-flex price-line">创意剧本&nbsp;：<span>￥500元/个</span></div>
+                                    <div class="v-flex price-line">视频拍摄制作&nbsp;：<span>￥3000元/条</span></div>
+                                    <div class="v-flex price-line">视频投放服务&nbsp;：<span>￥2分/次</span></div>
+                                    <p style="color: #333; text-align: right;margin-top: 20px;">联系创意顾问订购创意剧本</p>
                                     <div class="btn-buy-box">
                                         <a class="btn-buy-go" href="buy.html">立即联系创意顾问</a>
                                         <a class="btn-buy-go btn-buy-play" href="buy.html" style="background-color: #c3c3c3;">观看视频</a>
