--- a/video.html
+++ b/video.html
@@ -112,7 +112,7 @@
                             <div class="bg">
                                 <h3 class="video-desc-title"></h3>
                                 <div class="caption v-desc-info">
-                                    <div class="v-flex">
+                                    <div class="v-flex v-flex1">
                                         <p>编号&nbsp;：<span class="vid"></span></p>
                                         <p>发布日期&nbsp;：<span class="v-date"></span></p>
                                     </div>
