--- a/video.html
+++ b/video.html
@@ -130,8 +130,8 @@
                                     <div class="v-flex price-line">视频投放服务&nbsp;：<span>￥2分/次</span></div>
                                     <p style="color: #333; text-align: right;margin-top: 20px;">联系创意顾问订购创意剧本</p>
                                     <div class="btn-buy-box">
-                                        <a class="btn-buy-go" href="buy.html">立即联系创意顾问</a>
-                                        <a class="btn-buy-go btn-buy-play" href="buy.html" style="background-color: #c3c3c3;">观看视频</a>
+                                        <a class="btn-buy-go" href="javascript:;">联系创意顾问</a>
+                                        <a class="btn-buy-go" href="buy.html" style="background-color: #c3c3c3;">查看订购详情</a>
                                     </div>
                                 </div>
                             </div>
