--- a/video.html
+++ b/video.html
@@ -120,7 +120,7 @@
                                     <p style="font-style: italic; color: gray;">视频来源&nbsp;：
                                         <a class="v-url" href="#" target="_blank"></a>
                                     </p>
-                                    <div>
+                                    <div style="margin-left: -5px;">
                                         <div class="count-box">点赞量&nbsp;：<span class="like-count"></span></div>
                                         <div class="count-box" style="background-color: #485f7c;">评价量&nbsp;：<span class="comment-count"></span></div>
                                     </div>
