--- a/video.html
+++ b/video.html
@@ -128,7 +128,7 @@
                                     <div class="v-flex price-line">创意剧本&nbsp;：<span>￥500元/个</span></div>
                                     <div class="v-flex price-line">视频拍摄制作&nbsp;：<span>￥3000元/条</span></div>
                                     <div class="v-flex price-line">视频投放服务&nbsp;：<span>￥2分/次</span></div>
-                                    <p style="color: #333; text-align: right;margin-top: 20px;">联系创意顾问订购创意剧本</p>
+                                    <p style="color: #333; text-align: right;margin: 20px 0 10px 0;">联系创意顾问订购创意剧本</p>
                                     <div class="btn-buy-box">
                                         <a class="btn-buy-go" href="javascript:;">联系创意顾问</a>
                                         <a class="btn-buy-go" href="buy.html" style="background-color: #c3c3c3;">查看订购详情</a>
