--- a/video.html
+++ b/video.html
@@ -42,11 +42,9 @@
     <div id="yoo-top" class="user-post-profile">
         <div class="a">
             <ul class="container clearfix"> <a href="javascript:;" title="britneytokyo" class="user-avatar"> 
-                <img src="https://scontent-sjc3-1.cdninstagram.com/v/t51.2885-19/s150x150/36085882_205787880074252_6331302924160860160_n.jpg?_nc_ht=scontent-sjc3-1.cdninstagram.com&amp;_nc_ohc=BBU_XePW6LAAX---Rlv&amp;oh=c4211c7cfd5dccdc4ebbcb0acb3361b9&amp;oe=5EE0FCE8"
-                        width="70" height="70" alt="Britney TOKYO 💅✨ @britneytokyo" class="avatar" rel="nofollow"> </a>
+                <img src="" class="avatar"></a>
                 <div class="text">
-                    <h1> <a href="javascript:;" title="britneytokyo">Crystal</a>&nbsp;·&nbsp;北京, 中国 </h1>
-                    <p> 2天前 </p>
+                    <h1> <a href="javascript:;"></a></h1>
                 </div>
             </ul>
         </div>
