--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <link rel="shortcut icon" href="#/favicon.ico">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=5,minimum-scale=1,viewport-fit=cover"/>
+    <meta name="robots" content="all">
+    <meta name="revisit-after" content="1 days" >
+    <meta name="applicable-device"content="pc,mobile">
+    <mobile:mobile type="pc,mobile"/>
+    <meta name="keywords" content="沙抖创意官网,沙抖,创意,短视频,抖音,快手,抖大大,微视,剧本,制作,脚本,营销,拍摄,短视频大全,短视频拍摄报价,短视频制作报价">
+    <meta name="description" content="沙抖创意是一个最火爆的抖音短视频创意大全，它会聪明的分析最火爆短视频，并搜集到大数据库，整理好分类显示，自动为你推荐喜欢的内容，并提供短视频创意的定制和短视频拍摄，及短视频营销投放">
     <link href="css/app.css" rel="stylesheet" type="text/css">
     <title>沙抖创意</title>
 </head>
