--- a/video.html
+++ b/video.html
@@ -6,6 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=5,minimum-scale=1,viewport-fit=cover"/>
+    <meta name="robots" content="all">
+    <meta name="revisit-after" content="1 days" >
+    <meta name="applicable-device"content="pc,mobile">
+    <mobile:mobile type="pc,mobile"/>
+    <meta name="keywords" content="***,最新短视频，最佳创意，创意剧本，视频拍摄制作，视频投放服务，抖音短视频，沙抖创意出品"/>
+    <meta name="description" content="**** - 沙抖创意">
     <link href="css/app.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="iShare/style/fonts/iconfont.css">
     <link rel="stylesheet" type="text/css" href="iShare/style/css/ishare.css">
@@ -15,7 +22,7 @@
 <body>
     <header id="yoo-header">
         <nav class="nav-icon">
-            <a href="index.html" title="Yooying" class="i-brand"> 沙抖创意 </a>
+            <a href="index.html" class="i-brand"> 沙抖创意 </a>
             <a href="javascript:;" class="i-menu">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="24" height="24" stroke-width="3.5">
                     <path d="M4 8 L28 8 M4 16 L28 16 M4 24 L28 24"></path>
@@ -41,7 +48,7 @@
     </header>
     <div id="yoo-top" class="user-post-profile">
         <div class="a">
-            <ul class="container clearfix"> <a href="javascript:;" title="britneytokyo" class="user-avatar"> 
+            <ul class="container clearfix"> <a href="javascript:;" class="user-avatar"> 
                 <img src="" class="avatar"></a>
                 <div class="text">
                     <h1> <a href="javascript:;"></a></h1>
@@ -115,9 +122,12 @@
                                         <p>发布日期&nbsp;：<span class="v-date"></span></p>
                                     </div>
                                     <!-- <p>文案&nbsp;：“<span class="video-desc-title"></span>”</p> -->
-                                    <p style="font-style: italic; color: gray;">视频来源&nbsp;：
-                                        <a class="v-url" href="#" target="_blank"></a>
-                                    </p>
+                                    <div>
+                                        <p style="font-style: italic; color: gray; font-size: 13px; margin-top: 10px;">
+                                            视频来源&nbsp;：
+                                            <a class="v-url" href="#" target="_blank"></a>
+                                        </p>
+                                    </div>
                                     <div style="margin-left: -5px;">
                                         <div class="count-box">点赞量&nbsp;：<span class="like-count"></span></div>
                                         <div class="count-box" style="background-color: #485f7c;">评价量&nbsp;：<span class="comment-count"></span></div>
