--- a/user.html
+++ b/user.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <link rel="shortcut icon" href="#/favicon.ico">
     <link href="css/app.css" rel="stylesheet" type="text/css">
-    <title>创意分类</title>
+    <title>创意</title>
 </head>
 
 <body>
@@ -56,31 +56,18 @@
     </div>
     <div class="container" id="yoo-list">
         <div id="yoo-title-sm" class="clearfix">
-            <h2> <a href="#" id="category-title">精彩内容</a> </h2> 
+            <img src="" class="avatar-pic"><h2 class="user-nickname"></h2>
         </div>
         <ul class="row">
         </ul>
         <div class="loading">
             <img src="img/loading.svg" alt="">
         </div>
-        <!-- <div id="yoo-loading">
-            <div class="spinner">
-                <div class="rect1"></div>
-                <div class="rect2"></div>
-                <div class="rect3"></div>
-                <div class="rect4"></div>
-            </div>
-            <div class="button hide" data-page="home" data-switch="off" data-name="home" data-next="home"><span
-                    class="a">加载更多</span><span class="b">加载失败，请点击重试</span></div>
-            <div class="end"> <a href="https://www.yooying.com/inspirations?ref=discover" rel="nofollow"
-                    class="button">See
-                    More</a> </div>
-        </div> -->
     </div>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/imgload.min.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
-    <script src="js/category.js"></script>
+    <script src="js/user.js"></script>
 </body>
 
 </html>
