--- a/video.html
+++ b/video.html
@@ -121,7 +121,9 @@
                                         <p>编号&nbsp;：<span class="vid"></span></p>
                                         <p>发布日期&nbsp;：<span class="v-date"></span></p>
                                     </div>
-                                    <!-- <p>文案&nbsp;：“<span class="video-desc-title"></span>”</p> -->
+                                    <div class="video-time">
+                                        <p>视频时长 ：<span class="v-time">2：20</span></p>
+                                    </div>
                                     <div>
                                         <p style="font-style: italic; color: gray; font-size: 13px; margin-top: 10px;">
                                             视频来源&nbsp;：
@@ -131,6 +133,7 @@
                                     <div style="margin-left: -5px;">
                                         <div class="count-box">点赞量&nbsp;：<span class="like-count"></span></div>
                                         <div class="count-box" style="background-color: #485f7c;">评价量&nbsp;：<span class="comment-count"></span></div>
+                                        <div class="count-box" style="background-color: #485f7c;">分享数&nbsp;：<span class="share-count"></span></div>
                                     </div>
                                     <p style="font-size: 12px;margin-top: 20px"><span>服务：本站提供同视频剧本编制，及创意剧本定制及视频拍摄制作服务</span></p>
                                     <div class="v-flex price-line">创意剧本&nbsp;：<span>￥500元/个</span></div>
