--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
             <h1>沙抖创意</h1>
             <p>为用户提供视频创意库及视频制作服务</p>
         </div>
-        <div class="search"> <svg viewBox="0 0 32 32" width="18" height="18" stroke-width="2">
+        <div class="search"> 
+            <svg viewBox="0 0 32 32" width="18" height="18" stroke-width="2" class="search-btn">
                 <circle cx="14" cy="14" r="12"></circle>
                 <path d="M23 23 L30 30"></path>
-            </svg> <input type="text" class="search-input" id="search" placeholder="探索视频创意..."
-                data-from="home" autocapitalize="off" autocomplete="off"> </div>
+            </svg> <input type="text" class="search-input" id="search" placeholder="探索视频创意..." autocapitalize="off" autocomplete="off"> </div>
     </div>
     <div id="category">
         <ul class="clearfix">
@@ -142,6 +142,14 @@
     <script src="js/imgload.min.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
     <script src="js/index.js"></script>
+    <script>
+        $(function(){
+            $('.search-btn').click(function () {
+                let query = $('.search-input').val();
+                window.location.href = './search.html?query=' + query;
+            })
+        })
+    </script>
 </body>
 
 </html>
