--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
         <div class="loading">
             <img src="img/loading.svg" alt="">
         </div>
+        <div class="errorPage">
+            <p>网络遇到了一些问题，请联系网站管理员...</p>
+        </div>
         <!-- <div id="yoo-loading">
             <div class="spinner">
                 <div class="rect1"></div>
