--- a/category.html
+++ b/category.html
@@ -23,7 +23,7 @@
                     <path d="M2 30 L30 2 M30 30 L2 2"></path>
                 </svg>
             </a>
-            <a href="#/search" class="i-search" title="Search">
+            <a href="search-input.html" class="i-search" title="Search">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="20" height="20" stroke-width="3.5">
                     <circle cx="14" cy="14" r="12"></circle>
                     <path d="M23 23 L30 30"></path>
