--- a/search-input.html
+++ b/search-input.html
@@ -2,13 +2,12 @@
 <html lang="zh">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <link rel="shortcut icon" href="#/favicon.ico">
+    <meta name="keywords" content="">
+    <meta name="description" content="">
     <link href="css/app.css" rel="stylesheet" type="text/css">
-    <title>创意</title>
 </head>
 
 <body>
@@ -48,29 +47,39 @@
             <li><a href="#">关于沙抖</a></li>
         </ul>
     </header>
-    <div id="yoo-top">
+    <div id="yoo-top" class="search">
         <div class="a">
-            <div class="container">
-            </div>
+            <section class="container">
+                <strong class="clear-search" style="display: none;">×</strong>
+                <div class="search-btn">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 34 34" width="20" height="20"
+                        stroke-width="3.5">
+                        <circle cx="14" cy="14" r="12"></circle>
+                        <path d="M23 23 L30 30"></path>
+                    </svg>
+                </div>
+                <input name="key" type="text" class="search-input" id="search" data-from="search"
+                    placeholder="探索创意视频..." value="" autocapitalize="off" autocomplete="off">
+            </section>
         </div>
     </div>
-    <div class="container" id="yoo-list">
-        <div id="yoo-title-sm" class="clearfix">
-            <img src="" class="avatar-pic"><h2 class="user-nickname"></h2>
-        </div>
-        <ul class="row">
-        </ul>
-        <div class="loading">
-            <img src="img/loading.svg" alt="">
-        </div>
-        <div class="errorPage">
-            <p>网络遇到了一些问题，请联系网站管理员...</p>
-        </div>
+    <div id="yoo-list" class="container">
+        <ul class="row list-a"></ul>
     </div>
     <script src="js/jquery.min.js" type="text/javascript"></script>
-    <script src="js/imgload.min.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
-    <script src="js/user.js"></script>
+    <script>
+        $(function(){
+            $('.search-btn').click(function () {
+                let query = $('.search-input').val();
+                if (query) {
+                    window.location.href = './search.html?query=' + query;
+                } else {
+                    return false;
+                }
+            })
+        })
+    </script>
 </body>
 
 </html>
