--- a/user.html
+++ b/user.html
@@ -56,7 +56,7 @@
     </div>
     <div class="container" id="yoo-list">
         <div id="yoo-title-sm" class="clearfix">
-            <img src="" class="avatar-pic"><h2 class="user-nickname"></h2>
+            <!-- <img src="" class="avatar-pic"><h2 class="user-nickname"></h2> -->
         </div>
         <ul class="row">
         </ul>
