--- a/buy.html
+++ b/buy.html
@@ -14,7 +14,7 @@
             fill: #5c6ac4;
         }
     </style>
-    <title>创意订购</title>
+    <title>创意订购-沙抖创意-为用户提供视频创意库及视频制作服务</title>
 </head>
 
 <body>
