--- a/search.html
+++ b/search.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <link rel="shortcut icon" href="#/favicon.ico">
     <link href="css/app.css" rel="stylesheet" type="text/css">
-    <title>创意分类</title>
+    <title>搜索结果-沙抖创意-为用户提供视频创意库及视频制作服务</title>
 </head>
 
 <body>
