--- a/video.html
+++ b/video.html
@@ -16,7 +16,7 @@
     <link href="css/app.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="iShare/style/fonts/iconfont.css">
     <link rel="stylesheet" type="text/css" href="iShare/style/css/ishare.css">
-    <title>创意视频</title>
+    <title>沙抖创意-为用户提供视频创意库及视频制作服务</title>
 </head>
 
 <body>
