--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="stars-lg"></div>
         <div class="title">
             <h1>沙抖创意</h1>
-            <p>为用户提供视频创意库及视频制作服务</p>
+            <p style="letter-spacing: 2px;">火爆短视频大全及视频创作服务</p>
         </div>
         <div class="search"> 
             <svg viewBox="0 0 32 32" width="18" height="18" stroke-width="2" class="search-btn">
