--- a/buy.html
+++ b/buy.html
@@ -27,7 +27,7 @@
             text-align: center;
         }
     </style>
-    <title>创意订购-沙抖创意-为用户提供视频创意库及视频制作服务</title>
+    <title>创意订购-沙抖创意-火爆短视频大全及视频创作服务</title>
 </head>
 
 <body>
