--- a/category.html
+++ b/category.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <link rel="shortcut icon" href="#/favicon.ico">
     <link href="css/app.css" rel="stylesheet" type="text/css">
-    <title>分类-沙抖创意-为用户提供视频创意库及视频制作服务</title>
+    <title>分类-沙抖创意-火爆短视频大全及视频创作服务</title>
 </head>
 
 <body>
