--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="keywords" content="沙抖创意官网,沙抖,创意,短视频,抖音,快手,抖大大,微视,剧本,制作,脚本,营销,拍摄,短视频大全,短视频拍摄报价,短视频制作报价">
     <meta name="description" content="沙抖创意是一个最火爆的抖音短视频创意大全，它会聪明的分析最火爆短视频，并搜集到大数据库，整理好分类显示，自动为你推荐喜欢的内容，并提供短视频创意的定制和短视频拍摄，及短视频营销投放">
     <link href="css/app.css" rel="stylesheet" type="text/css">
-    <title>沙抖创意-为用户提供视频创意库及视频制作服务</title>
+    <title>沙抖创意-火爆短视频大全及视频创作服务</title>
 </head>
 <body>
     <header id="yoo-header">
