--- a/index.html
+++ b/index.html
@@ -18,9 +18,17 @@
 <body>
     <header id="yoo-header">
         <nav class="nav-icon">
-            <a href="index.html" title="Yooying" class="i-brand">
+            <a href="index.html"  class="i-brand">
                 沙抖创意
             </a>
+            <nav class="nav-bar">
+                <a href="index.html">首页</a>
+                <a href="type.html">分类</a>
+                <a href="javascript:;">案例</a>
+                <a href="buy.html">订购</a>
+                <a href="javascript:;">招募合作</a>
+                <a href="javascript:;">关于</a>
+            </nav>
             <a href="javascript:;" class="i-menu">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="24" height="24" stroke-width="3.5">
                     <path d="M4 8 L28 8 M4 16 L28 16 M4 24 L28 24"></path>
@@ -36,25 +44,13 @@
                 </svg>
             </a>
         </nav>
-        <nav class="nav-bar">
-            <a href="category.html?type=youxi">游戏</a>
-            <a href="category.html?type=jiankang">健康</a>
-            <a href="category.html?type=tiyu">体育</a>
-            <a href="category.html?type=dongman">动漫</a>
-            <a href="category.html?type=shishang">时尚</a>
-            <a href="category.html?type=jiaoyu">教育</a>
-            <a href="category.html?type=qiche">汽车</a>
-            <a href="category.html?type=keji">科技</a>
-            <a href="category.html?type=sheyingjiaoxue">摄影</a>
-            <a href="category.html?type=zhengwu">政务</a>
-            <a href="category.html?type=bangongruanjian">办公</a>
-            <a href="category.html?type=wenxueyishu">艺术</a>
-        </nav>
         <ul class="nav-dropdown">
             <li><a href="index.html">首页</a></li>
             <li><a href="type.html">创意分类</a></li>
-            <li><a href="buy.html">购买</a></li>
-            <li><a href="#">关于沙抖</a></li>
+            <li><a href="buy.html">订购</a></li>
+            <li><a href="javascript:;">案例</a></li>
+            <li><a href="javascript:;">招募合作</a></li>
+            <li><a href="javascript:;">关于</a></li>
         </ul>
     </header>
     <div id="masthead">
@@ -109,9 +105,14 @@
             </li>
             <li>
                 <div class="bg" style="background-image: url(./img/yingshi.png)">
-                    <h2> <a href="category.html?type=yingshiyule"> 影视娱乐 </a> </h2>
+                    <h2> <a href="type.html"> 更多 </a> </h2>
                 </div>
             </li>
+            <!-- <li>
+                <div class="bg" style="background-image: url(./img/yingshi.png)">
+                    <h2> <a href="category.html?type=yingshiyule"> 影视娱乐 </a> </h2>
+                </div>
+            </li> -->
         </ul>
     </div>
     <div class="container" id="yoo-list">
@@ -154,7 +155,13 @@
                 } else {
                     return false;
                 }
-            })
+            });
+            $('#search').bind('keyup', function(event) {
+            　　if (event.keyCode == "13") {
+            　　　　//回车执行查询
+            　　　　$('.search-btn').click();
+            　　}
+            });
         })
     </script>
 </body>
