--- a/search.html
+++ b/search.html
@@ -14,7 +14,15 @@
 <body>
     <header id="yoo-header">
         <nav class="nav-icon">
-            <a href="index.html" title="Yooying" class="i-brand"> 沙抖创意 </a>
+            <a href="index.html"  class="i-brand"> 沙抖创意 </a>
+            <nav class="nav-bar">
+                <a href="index.html">首页</a>
+                <a href="type.html">分类</a>
+                <a href="javascript:;">案例</a>
+                <a href="buy.html">订购</a>
+                <a href="javascript:;">招募合作</a>
+                <a href="javascript:;">关于</a>
+            </nav>
             <a href="javascript:;" class="i-menu">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="24" height="24" stroke-width="3.5">
                     <path d="M4 8 L28 8 M4 16 L28 16 M4 24 L28 24"></path>
@@ -44,8 +52,10 @@
         <ul class="nav-dropdown">
             <li><a href="index.html">首页</a></li>
             <li><a href="type.html">创意分类</a></li>
-            <li><a href="buy.html">购买</a></li>
-            <li><a href="#">关于沙抖</a></li>
+            <li><a href="buy.html">订购</a></li>
+            <li><a href="javascript:;">案例</a></li>
+            <li><a href="javascript:;">招募合作</a></li>
+            <li><a href="javascript:;">关于</a></li>
         </ul>
     </header>
     <div id="yoo-top">
