--- a/video.html
+++ b/video.html
@@ -24,6 +24,15 @@
     <header id="yoo-header">
         <nav class="nav-icon">
             <a href="index.html" class="i-brand"> 沙抖创意 </a>
+            <nav class="nav-bar">
+                <a href="index.html">首页</a>
+                <a href="type.html">分类</a>
+                <a href="javascript:;">案例</a>
+                <a href="buy.html">订购</a>
+                <a href="javascript:;">招募合作</a>
+                <a href="javascript:;">关于</a>
+                
+            </nav>
             <a href="javascript:;" class="i-menu">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="24" height="24" stroke-width="3.5">
                     <path d="M4 8 L28 8 M4 16 L28 16 M4 24 L28 24"></path>
@@ -43,8 +52,10 @@
         <ul class="nav-dropdown">
             <li><a href="index.html">首页</a></li>
             <li><a href="type.html">创意分类</a></li>
-            <li><a href="buy.html">购买</a></li>
-            <li><a href="#">关于沙抖</a></li>
+            <li><a href="buy.html">订购</a></li>
+            <li><a href="javascript:;">案例</a></li>
+            <li><a href="javascript:;">招募合作</a></li>
+            <li><a href="javascript:;">关于</a></li>
         </ul>
     </header>
     <div id="yoo-top" class="user-post-profile">
@@ -111,7 +122,7 @@
                                     <p style="font-size: 12px;margin-top: 20px">
                                         <span>服务：本站提供同视频剧本编制，及创意剧本定制及视频拍摄制作服务</span></p>
                                     <div class="v-flex price-line">创意剧本&nbsp;：<span>￥500元/个</span></div>
-                                    <div class="v-flex price-line">视频拍摄制作&nbsp;：<span>￥3000元/条</span></div>
+                                    <div class="v-flex price-line">视频拍摄制作&nbsp;：<span>￥3500元/条</span></div>
                                     <div class="v-flex price-line">视频投放服务&nbsp;：<span>￥2分/次</span></div>
                                     <p style="color: #333; text-align: right;margin: 20px 0 10px 0;">联系创意顾问订购创意剧本</p>
                                     <div class="btn-buy-box">
